corrected clipping to allow table scrolling to generate pdf

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -14,14 +14,19 @@
   background-color: rgba(225, 225, 225, 0.9);
   border-collapse: separate;
   border-radius: 25px;
-  overflow: hidden;
-  margin: 5px;
-  padding: 3%;
-  width: 1200px;
-  height:800px;
-  display: flex;
-  align-items: flex-start;
+  overflow-y: scroll;
+  padding: 5%;
+  width: 800px;
+  height: 800px;
+  object-fit: cover;
+
   box-shadow: 15px 15px 30px 0 rgba(0, 0, 0, 0.11),
     15px 5px 15px 0 rgba(0, 0, 0, 0.08);
   box-sizing: border-box;
+}
+
+.page {
+  width: 1200px;
+  height: 1000px;
+  border:solid 1px blue;
 }
