--- a/app/src/download/report.css
+++ b/app/src/download/report.css
@@ -3,11 +3,12 @@ table {
     border-collapse: collapse;
     margin: 10px;
     padding: 10px;
-    width: 1400px;
-    height: 1200px;
-    table-layout: fixed;
+    width: 1450px;
+    height: 2800px;
+    table-layout: auto;
     font-size: 16pt;
-    size: landscape;
+    size: A4;
+    object-fit: cover;
 }
 
 table th:last-child {
